fix nav ul overflow

--- a/ResponsiveWebDesign/AccessibilityQuizApp/styles.css
+++ b/ResponsiveWebDesign/AccessibilityQuizApp/styles.css
@@ -52,6 +52,11 @@ nav > ul {
     justify-content: space-evenly;
     color: #f5f6f7;
     list-style-type: none;
+    align-items: center;
+  padding-inline-start: 0;
+  margin-block: 0;
+  height: 100%;
+  flex-wrap: wrap;
 }
 
 nav li {
